# ms-mint

./: .buildinfo  .coveragerc  .flake8  .gitattributes  .gitignore  .slugignore  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  Metabolomics_Interactive_Intensity_Integration_Tool.ipynb  Mint__onedir__.spec  Mint__onefile__.spec  README.md  Start-MIIIT-Linux.sh  Start-MIIIT-Win.bat  app.json  entrypoint.sh  environment.yml  environment_minimal.yml  genindex.html  index.html  index.rst  mint.out  mkdocs.yml  modules.html  ms_mint.html  ms_mint.peak_optimization.html  ms_mint.visualization.html  ms_mint.visualization.matplotlib.html  ms_mint.visualization.plotly.html  objects.inv  peaklist.csv  py-modindex.html  pyproject.toml  readm.html  readme.html  requirements-dev.txt  (+8 more)
.doctrees/: environment.pickle  index.doctree  modules.doctree  ms_mint.doctree  readme.doctree
.github/workflows/: asdf.yml  codeql-analysis.yml  codescan.yml  create-docs  docker-image.yml  documentation.yml  git-quality.yml  pythonpackage.yml  pythonpublish.yml
InnoSetup/: InnoSetupScript.iss
_modules/: index.html
_modules/ms_mint/: Chromatogram.html  Mint.html  MintResultsPlotter.html  PlotGenerator.html  chromatogram.html  filelock.html  filter.html  filters.html  helpers.html  io.html  matplotlib_tools.html  notebook.html  pca.html  plotly_tools.html  plotting.html  processing.html  resampling.html  targets.html  tools.html
_sources/: index.rst.txt  ms_mint.peak_optimization.rst.txt  ms_mint.rst.txt  ms_mint.visualization.matplotlib.rst.txt  ms_mint.visualization.plotly.rst.txt
_static/: documentation_options.js
api_reference/: index.html
api_reference/core/: index.html
api_reference/io/: index.html
api_reference/processing/: index.html
api_reference/targets/: index.html
api_reference/tools/: index.html
api_reference/visualization/: index.html
app/: App2.py  ms_files.py  peaklist.py  results.py  tools.py  workspaces.py
docker/: Dockerfile.test  docker-compose.test.yml  run-tests.sh
docs/: background.md  conf.py  developer-notes.md  docker.md  gallery.md  gtag.js  gui.md  index.md  index.rst  install.md  installation.md  jupyter.md  modules.rst  ms_mint.rst  ms_mint.visualization.rst  peak-detection.md  peak_detection.md  peaklists.md  python.md  quickstart.md  requirements.txt  targets.md  troubleshooting.md
docs/_templates/: layout.html
docs/api_reference/: core.md  index.md  io.md  processing.md  targets.md  tools.md  visualization.md
docs/user_guide/: file_formats.md  gui.md  index.md  target_lists.md  visualization.md
flaskapp/: app.json  config.py  dashapp.py  flaskapp.py  serve.py  wsgi.py
flaskapp/app/: extensions.py  flaskapp.py  forms.py  models.py  webapp.py
flaskapp/migrations/: env.py
hooks/: hook-dash.py  hook-dash_extensions.py  hook-dash_tabulator.py  hook-flask.py  hook-ms_mint.py  hook-pymzml.py
installation/: index.html
local_wheels/: dash_uploader-0.5.0-py3-none-any.whl
miiit/: SelectFilesButton.py  miiit.py
mint/: Mint.py  SelectFilesButton.py  SelectFolderButton.py  __init__.py  backend.py  tools.py
ms_mint/: JupyterGUI.py  Layout.py  Mint.py  MintPlotter.py  MintResultsPlotter.py  ParallelExecutor.py  PlotGenerator.py  Resampler.py  SelectFilesButton.py  SelectFolderButton.py  TargetOptimizer.py  __init__.py  _version.py  backend.py  button_style.py  chromatogram.py  dash_gui.py  dash_layout.py  filelock.py  filter.py  filters.py  helpers.py  io.py  jupyter_gui.py  matplotlib_tools.py  notebook.py  pca.py  peaklists.py  plotly_tools.py  plotting.py  processing.py  resampling.py  standards.py  targets.py  tools.py  version.py  viz.py
ms_mint/app/: App.py  Layout.py  add_metab.py  analysis.py  app.py  auth.py  button_style.py  database.py  distributions.py  heatmap.py  hierachical_clustering.py  messages.py  messenges.py  metadata.py  ms_files.py  (+11 more)
notebooks/: Chromatogram.ipynb  Example-run-mint.ipynb  Example_figures.ipynb  MINT-Peak-Optimization.ipynb  MINT-profiling.ipynb  MINT__demo.ipynb  MINT__peak-picking.ipynb  Metabolomics_Interactive_Intensity_Integration_Tool.ipynb  Mint.ipynb  MintGui_Colab.ipynb  PCA.ipynb  metadata.parquet  mint_results_example.csv  pca.html  results.csv  results.parquet  targets.csv  test-export.csv
quickstart/: index.html
scripts/: Mint  Mint-Dash.py  Mint-QT.py  Mint.bat  Mint.py  Mint__windows.bat  TestApp.py  dash_example.py  mint-start-Linux.py  ms-mint-convert.py
search/: search_index.json
specfiles/: Mint__onedir__.spec
static/: ChEBI-Groups.parquet  ChEBI-groups.tsv  Standard_Peaklist.csv  test_results.csv
tests/: _test__integrate_peaks.py  _test__to_peaks.py  paths.py  test.csv  test1_peaklist.csv  test__MINT-integration.py  test__MINT-run.py  test__MINT_notebook.py  test__Mint.py  test__Mint_integration.py  test__Resampler.py  test__backend.py  test__chromatogram.py  test__convert_ms_file_to_feather.py  test__export_and_load.py  test__export_to_excel.py  test__filelock.py  test__generate_grid_peaklist.py  test__helpers.py  test__hierarchial_clustering.py  test__integrate_peak.py  test__integrate_peaks.py  test__integrate_peaks_from_filename.py  test__integration.py  test__io.py  test__matplotlib_tools.py  test__notebook.py  test__pca.py  test__peak_detection.py  test__peaklists.py  test__plotly.py  test__plotly_tools.py  test__processing.py  test__results.csv  test__run_skips_broken_files.py  test__scaling.py  test__targets.py  test__to_peaks.py  test__tools.py  test__visualization_plotly.py  (+1 more)
troubleshooting/: index.html
user_guide/: index.html
(+98 files in other folders)
